# agentsystem

./: agent-system-architecture.mermaid  pyproject.toml  readme.md  refactoring-process.mermaid  util.py
agents/: agents.py  open_ai_agent.py  test_agent.py  test_preprocessor.py
agents/tools/: test_tool.py
agentsystem/: RefactorAgent.py
agentsystem/agents/: UserConsoleAgent.py  index_agents.py
agentsystem/agents/preprocessor/: preprocessor.py
agentsystem/agents/tools/: tool.py
agentsystem/models/: KoboldCppModel.py  LlamaModel.py  Model.py  Response.py  message.py
agentsystem/templates/: document_prompt.py
agentsystem/tests/: tracer.py
models/: OllamaModel.py  SocketMessage.py  SocketModel.py  test_message.py
templates/: __init__.py  refactor_prompt.py
tests/: test_magic.py
