[project]
name = "agentsystem"
version = "0.1.0"
description = "LLM Agent Framework"
authors = [
    {name = "Daniel Dengler",email = "daniel@busitec.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
